Closed
Bug 485396
Opened 17 years ago
Closed 17 years ago
Crash in [@ NS_GetInnermostURI - nsDOMStorage::InitAsLocalStorage] with Chromebug running
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: morac, Assigned: mayhemer)
References
Details
(Keywords: crash, fixed1.9.1)
Crash Data
Attachments
(1 file)
|
1.07 KB,
patch
|
dcamp
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b3) Gecko/20090305 Firefox/3.1b3
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090326 Minefield/3.6a1pre
Starting with a recently nightly, if I try to run Minefield in "Chromebug mode" by specifying the "-chromebug" parameter, Minefield crashes on startup.
The crashes started occurring with the "Gecko/20090319 Minefield/3.6a1pre" nightly build.
Based on the call stack and looking at what changed in that time period I would guess that bug 422526 would be the cause.
Reproducible: Always
Steps to Reproduce:
1. Install Chromebug 0.5.0a1 and Firebug 1.4X.0a14 from http://getfirebug.com/releases/index.html
2. Start Minefield with command "firefox -chromebug"
Actual Results:
Minefield crashes
Expected Results:
Minefield should not crash.
http://crash-stats.mozilla.com/report/index/65d0425f-97c8-4603-80c5-6da542090325
http://crash-stats.mozilla.com/report/index/8802d6d4-86de-42b0-8a12-c8fbb2090326
| Assignee | ||
Comment 1•17 years ago
|
||
I'll do an analyzes and a fix for this. Thanks for the report.
Assignee: nobody → honzab.moz
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
as a quick hint, NS_GetInnermostURI is intentionally not nullsafe, ECALLER
Component: DOM → DOM: Mozilla Extensions
Keywords: crash
Summary: Crash in NS_GetInnermostURI in nsDOMStorage::InitAsLocalStorage() with Chromebug running → Crash in [@ NS_GetInnermostURI - nsDOMStorage::InitAsLocalStorage] with Chromebug running
| Assignee | ||
Comment 3•17 years ago
|
||
Hmm... is there anything I have to do with Chromebug to trigger the crash? I have installed Firebug and Chromebug as described and FF starts normally. Also, did you have to update FF version in the Firebug's install.rdf?
| Assignee | ||
Comment 4•17 years ago
|
||
Very simple fix. The codepath will prevent returning a crippled localStorage. I could reproduce the crash by clicking the DOM tab in Chromebug.
Attachment #370173 -
Flags: review?(dcamp)
Updated•17 years ago
|
Attachment #370173 -
Flags: review?(dcamp) → review+
| Assignee | ||
Comment 5•17 years ago
|
||
Comment on attachment 370173 [details] [diff] [review]
v1 [Checkin comment 5]
http://hg.mozilla.org/mozilla-central/rev/0c0a74a303c5
Attachment #370173 -
Attachment description: v1 → v1 [Checkin comment 5]
| Assignee | ||
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 6•17 years ago
|
||
I can verify that it's no longer crashing in the 20090402 nightly trunk load.
Status: RESOLVED → VERIFIED
Comment 7•17 years ago
|
||
in-testsuite+ with http://hg.mozilla.org/mozilla-central/rev/909d0b9c7c96
Flags: in-testsuite+
Flags: in-litmus-
Comment 8•17 years ago
|
||
So, it looks like this got landed on 1.9.1, but didn't get marked? My patch in bug 494453 would not have applied without it, and code beforehand has this change.
Test landed on 1.9.1 as well:
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/3b1fa6b45efc
Doing some checking to see when this got pushed to 1.9.1, then I'll mark with the keyword.
Comment 9•17 years ago
|
||
This was fixed in bug 486654, with http://hg.mozilla.org/releases/mozilla-1.9.1/rev/dc7929b978bb
Keywords: fixed1.9.1
Updated•15 years ago
|
Crash Signature: [@ NS_GetInnermostURI - nsDOMStorage::InitAsLocalStorage]
Updated•13 years ago
|
Component: DOM: Mozilla Extensions → DOM
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•