Bug 485396 - Crash in [@ NS_GetInnermostURI - nsDOMStorage::InitAsLocalStorage] with Chromebug running, r=dcamp